# shopping-list

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: cipher.h  helpers.h  item.h  itemhelpers.h  list.h  listio.h  types.h
src/: cipher.c  helpers.c  item.c  itemhelpers.c  list.c  listio.c  main.c
tests/: CMakeLists.txt  cipher.cpp  item.cpp  list.cpp
